Introduce support number
Why:
We would like to provide the option render a support contact number on
the callback form and in the 'How do I get a verification code?' section
of the verification code info screen. When a user taps this number the
device should open the call app with this number loaded.

This commit:
Introduces a new env variable, SUPPORT_PHONE_NUMBER, which when provided
will render a link for that number on the callback form and the more
info screen

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,7 @@
   },
   "callback": {
     "firstname": "First name",
+    "if_you_prefer": "If you prefer; call directly at",
     "lastname": "Last name",
     "phone_number_required": "Phone number (required)",
     "request_a_call": "Request a call from our support team",
@@ -135,6 +136,7 @@
       "yes_i_did_have": "Yes, I did have symptoms"
     },
     "verification_code_info": {
+      "contact_at": "Contact the {{healthAuthorityName}} at",
       "how_do_i_get_body": "Contact your health authority, {{healthAuthorityName}}.",
       "how_do_i_get_header": "How do I get a verification code?",
       "info_body": "A verification code is a code provided to you by your health authority, {{healthAuthorityName}}, if you receive a positive test result.\n\nThe verification code is used to verify that your positive test result is authentic.\n\nEach verification code will expire after a short period to ensure that out of date test results are not submitted.\n\nIf you encounter an error when submitting your verification code, you must get a new code from your health authority before submitting again.",
