Update covid recommendation text
Why:
We would like to update the content of the covid recommendation screen.

This commit:
Updates the content on the covid recommendation screen and moves the
logic for parsing the quarantine length environment variable to the
conficonfigurationContext.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,7 +35,6 @@
     "select_language": "Select language",
     "settings": "Open Settings",
     "skip": "Skip",
-    "something_went_wrong": "Something went wrong",
     "start": "Start",
     "submit": "Submit",
     "success": "Success"
@@ -52,6 +51,19 @@
     "see_more": "See more",
     "source": "source: {{source}}"
   },
+  "covid_recommendation": {
+    "and_other_covid": "- And other other COVID-19 symptoms have improved.",
+    "at_least_x_days": "- At least {{quarantineLength}} days after your symptoms began,",
+    "cdc_guidance": "CDC guidance",
+    "from_others_at": "from others at all times and ",
+    "get_rest_and_stay": "Get rest and stay hydrated. For more information on how to prevent spreading the illness to others, see the CDC guidance on what to do when you are sick: ",
+    "includeing_people": "including people in your household.",
+    "maintain_at_least": "Maintain at least 6-foot distance ",
+    "physically_separate": "Physically separate yourself from others, ",
+    "stay_home": "Stay home and isolate, until:",
+    "wear_a_face_covering": "wear a face covering.",
+    "you_have_not_had_a": "- You have not had a fever for a least 24 hour,"
+  },
   "errors": {
     "description": "An error has occurred. Please reload the app.",
     "reload": "Reload",
@@ -60,6 +72,11 @@
     "try_again_later": "Try again later"
   },
   "escrow_verification": {
+    "complete_healthcheck": "Complete Healthcheck",
+    "complete": {
+      "body": "You’re helping contain the spread of the virus and protect others in your community and beyond.",
+      "title": "Thanks for keeping everyone safe!"
+    },
     "error": {
       "invalid_phone_number": "Phone number must be 10 digits",
       "rate_limit": "You've reach the daily submission limit. Please try again in 24 hours."
@@ -75,18 +92,10 @@
       "subheader": "Please provide your phone number and test date and we'll text you your verification code.",
       "test_date": "Test date",
       "test_details": "Test Details"
-    },
-    "complete_healthcheck": "Complete Healthcheck",
-    "complete": {
-      "body": "You’re helping contain the spread of the virus and protect others in your community and beyond.",
-      "title": "Thanks for keeping everyone safe!"
     }
   },
   "export": {
     "code": "Code",
-    "code_input_body_bluetooth": "Enter your verification code",
-    "code_input_button_cancel": "Cancel",
-    "code_input_title_bluetooth": "Verify your diagnosis",
     "complete_body_bluetooth": "You’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_body_0": "Sharing your positive diagnosis is optional and can only be done with your consent.",
@@ -99,11 +108,9 @@
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "enter_verification_code": "Enter verification code",
     "error": {
-      "invalid_code": "Try a different code",
       "invalid_format": "Codes may only contain numbers and letters",
       "network_connection_error": "There is no internet connection",
-      "unknown_code_verification_error": "Try a different code",
-      "verification_code_used": "Verification code has already been used"
+      "unknown_code_verification_error": "Try a different code"
     },
     "intro": {
       "body1": "If you have received a verification code from {{healthAuthorityName}} for a positive COVID-19 test, you can submit the verification code on the following screen.",
@@ -206,7 +213,6 @@
   "home": {
     "bluetooth_info_body": "Your phone detects other phones you spend time in close contact with using Bluetooth Low Energy. This allows the app to log your daily encounters anonymously, even when you don’t have the app open on your device.",
     "bluetooth": {
-      "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
       "location_disabled_error_message": "To activate the Exposure Notification technology, authorize Location access in the Settings app",
       "location_disabled_error_title": "Authorize in Settings",
       "location_header": "Location",
@@ -215,7 +221,6 @@
       "share": "Share {{applicationName}}",
       "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadUrl}}",
       "tracing_off_header": "Exposure Detection Off",
-      "tracing_off_subheader": "Enable Bluetooth and Proximity Tracing to get info about possible exposures",
       "tracing_on_header": "Exposure Detection On"
     },
     "call_emergency_services": "Call Emergency Services",
@@ -253,7 +258,6 @@
     "launch_get_started": "Get Started",
     "launch_screen1_header": "Welcome to ",
     "privacy_policy": "Privacy Policy",
-    "question_icon": "Question mark icon",
     "unchecked_checkbox": "Unchecked checkbox"
   },
   "navigation": {
