--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -185,7 +185,8 @@
     "updated": "Updated",
     "why_did_i_get_an_en": "Why did I get an exposure notification?",
     "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you have been in close contact with later uses the app to report a positive COVID-19 test.",
-    "your_device_exchanged": "Within each date range below, your device exchanged keys with another device that later received a verified positive test result."
+    "your_device_exchanged": "Within each date range below, your device exchanged keys with another device that later received a verified positive test result.",
+    "your_recommended_quarantine_is_over": "Your recommended quarantine is over. Please continue to follow the health guidelines."
   },
   "exposure_notification_alerts": {
     "bluetooth_body": "To activate Exposure Notifications, you must first turn on Bluetooth in your Settings app.",
