--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,12 +53,16 @@
   },
   "covid_recommendation": {
     "and_other_covid": "- And other other COVID-19 symptoms have improved.",
+    "monitor_for_fever": "Monitor for fever, cough or other COVID-19 symptoms:",
     "to_prevent_the_spread": "To prevent the spread of COVID-19 if you are sick you should:",
+    "get_a_covid_test": "Get a COVID-19 test:",
     "stay_home_except_to_get_medical_care": "Stay home except to get medical care.",
-    "at_least_x_days": "- At least {{quarantineLength}} days after your symptoms began,",
-    "cdc_guidance": "CDC guidance",
+    "find_a_test_center": "Find a test center",
+    "review_symptoms": "Review CDC symptoms",
+    "review_cdc_guidance": "Review CDC guidance",
     "from_others_at": "from others at all times and ",
-    "get_rest_and_stay": "Get rest and stay hydrated. For more information on how to prevent spreading the illness to others, see the CDC guidance on what to do when you are sick: ",
+    "get_rest_and_stay": "Get rest and stay hydrated.",
+    "for_more_information": "For more information on how to prevent spreading the illness to others, see the CDC guidance on what to do when you are sick: ",
     "includeing_people": "including people in your household.",
     "maintain_at_least": "Maintain at least 6-foot distance ",
     "physically_separate": "Physically separate yourself from others, ",
