--- a/android/app/src/main/res/values-es-rPR/strings.xml
+++ b/android/app/src/main/res/values-es-rPR/strings.xml
@@ -3,6 +3,6 @@
   <string name="background_worker_notification_title">Verificando la exposición...</string>
   <string name="exposure_notification_channel_description">Alertas de Notificaciones de Exposición.</string>
   <string name="exposure_notification_channel_name">Aviso de exposición</string>
-  <string name="exposure_notification_message">Has estado cerca de alguien que arrojó positivo a COVID-19. Pulse para obtener más información.</string>
+  <string name="exposure_notification_message">Has estado cerca de alguien que dió positivo a COVID-19. Pulse para obtener más información.</string>
   <string name="exposure_notification_title">Posible exposición al COVID-19</string>
 </resources>
