--- a/android/app/src/main/res/values-tr/strings.xml
+++ b/android/app/src/main/res/values-tr/strings.xml
@@ -3,6 +3,6 @@
   <string name="background_worker_notification_title">Maruziyet kontrolü yapılıyor</string>
   <string name="exposure_notification_channel_description">Maruz kalma bildirimi uyarıları</string>
   <string name="exposure_notification_channel_name">Maruz Kalma Bildirimi</string>
-  <string name="exposure_notification_message">Yakınında bulunmuş olduğun birinin COVID-19 testi daha sonra pozitif çıktı. Daha fazla bilgi için tıkla.</string>
+  <string name="exposure_notification_message">Yakınında bulunmuş olduğun birinin COVID-19 testi pozitif çıktı. Daha fazla bilgi için tıkla.</string>
   <string name="exposure_notification_title">Olası COVID-19 maruziyeti</string>
 </resources>
