--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -6,7 +6,6 @@
     "version": "Έκδοση:"
   },
   "callback": {
-    "fill_out_the_info": "Συμπληρώστε τις παρακάτω πληροφορίες και ένας ανιχνευτής επαφών από το {{healthAuthorityName}} θα επικοινωνήσει μαζί σας.",
     "firstname": "Όνομα",
     "lastname": "Επώνυμο",
     "phone_number_required": "Αριθμός τηλεφώνου (απαιτείται)",
@@ -52,6 +51,9 @@
     "see_more": "Δείτε περισσότερα",
     "source": "προέλευση: {{source}}"
   },
+  "covid_recommendation": {
+    "find_a_test_center": "Εύρεση κέντρου ελέγχων"
+  },
   "errors": {
     "description": "Προέκυψε σφάλμα. Φορτώστε ξανά την εφαρμογή.",
     "reload": "Φόρτωση εκ νέου",
@@ -59,6 +61,10 @@
     "title": "Άγνωστο σφάλμα"
   },
   "escrow_verification": {
+    "complete": {
+      "body": "Βοηθάτε στον περιορισμό της εξάπλωσης του ιού και προστατεύετε άλλους στην κοινότητά σας.",
+      "title": "Ευχαριστούμε που διατηρείτε την κοινότητά σας ασφαλή!"
+    },
     "error": {
       "invalid_phone_number": "Ο αριθμός τηλεφώνου πρέπει να είναι 10 ψηφία"
     },
