--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,6 +35,7 @@
     "select_language": "Select language",
     "settings": "Open Settings",
     "skip": "Skip",
+    "something_went_wrong": "Something went wrong",
     "start": "Start",
     "submit": "Submit",
     "success": "Success"
@@ -53,20 +54,20 @@
   },
   "covid_recommendation": {
     "and_other_covid": "- And other other COVID-19 symptoms have improved.",
-    "monitor_for_fever": "Monitor for fever, cough or other COVID-19 symptoms:",
-    "to_prevent_the_spread": "To prevent the spread of COVID-19 if you are sick you should:",
-    "get_a_covid_test": "Get a COVID-19 test:",
-    "stay_home_except_to_get_medical_care": "Stay home except to get medical care.",
     "find_a_test_center": "Find a test center",
-    "review_symptoms": "Review CDC symptoms",
-    "review_cdc_guidance": "Review CDC guidance",
-    "from_others_at": "from others at all times and ",
-    "get_rest_and_stay": "Get rest and stay hydrated.",
     "for_more_information": "For more information on how to prevent spreading the illness to others, see the CDC guidance on what to do when you are sick: ",
+    "from_others_at": "from others at all times and ",
+    "get_a_covid_test": "Get a COVID-19 test:",
+    "get_rest_and_stay": "Get rest and stay hydrated.",
     "includeing_people": "including people in your household.",
     "maintain_at_least": "Maintain at least 6-foot distance ",
+    "monitor_for_fever": "Monitor for fever, cough or other COVID-19 symptoms:",
     "physically_separate": "Physically separate yourself from others, ",
+    "review_cdc_guidance": "Review CDC guidance",
+    "review_symptoms": "Review CDC symptoms",
     "stay_home": "Stay home and isolate, until:",
+    "stay_home_except_to_get_medical_care": "Stay home except to get medical care.",
+    "to_prevent_the_spread": "To prevent the spread of COVID-19 if you are sick you should:",
     "wear_a_face_covering": "wear a face covering.",
     "you_have_not_had_a": "- You have not had a fever for a least 24 hour,"
   },
@@ -102,6 +103,9 @@
   },
   "export": {
     "code": "Code",
+    "code_input_body_bluetooth": "Enter your verification code",
+    "code_input_button_cancel": "Cancel",
+    "code_input_title_bluetooth": "Verify your diagnosis",
     "complete_body_bluetooth": "You’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_body_0": "Sharing your positive diagnosis is optional and can only be done with your consent.",
@@ -114,9 +118,11 @@
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "enter_verification_code": "Enter verification code",
     "error": {
+      "invalid_code": "Try a different code",
       "invalid_format": "Codes may only contain numbers and letters",
       "network_connection_error": "There is no internet connection",
-      "unknown_code_verification_error": "Try a different code"
+      "unknown_code_verification_error": "Try a different code",
+      "verification_code_used": "Verification code has already been used"
     },
     "intro": {
       "body1": "If you have received a verification code from {{healthAuthorityName}} for a positive COVID-19 test, you can submit the verification code on the following screen.",
@@ -220,6 +226,7 @@
   "home": {
     "bluetooth_info_body": "Your phone detects other phones you spend time in close contact with using Bluetooth Low Energy. This allows the app to log your daily encounters anonymously, even when you don’t have the app open on your device.",
     "bluetooth": {
+      "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
       "location_disabled_error_message": "To activate the Exposure Notification technology, authorize Location access in the Settings app",
       "location_disabled_error_title": "Authorize in Settings",
       "location_header": "Location",
@@ -228,6 +235,7 @@
       "share": "Share {{applicationName}}",
       "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadUrl}}",
       "tracing_off_header": "Exposure Detection Off",
+      "tracing_off_subheader": "Enable Bluetooth and Proximity Tracing to get info about possible exposures",
       "tracing_on_header": "Exposure Detection On"
     },
     "call_emergency_services": "Call Emergency Services",
@@ -265,6 +273,7 @@
     "launch_get_started": "Get Started",
     "launch_screen1_header": "Welcome to ",
     "privacy_policy": "Privacy Policy",
+    "question_icon": "Question mark icon",
     "unchecked_checkbox": "Unchecked checkbox"
   },
   "navigation": {
@@ -510,10 +519,10 @@
     "code_used_title": "Verification Code Already Used",
     "invalid_code_body": "The verification code you submitted is invalid.\n\nThe code must be a valid verification code provided to you by your health authority.\n\nIt is also possible that your code has expired. If so, you will need to request a new code from your health authority.",
     "invalid_code_title": "Invalid Code",
-    "no_keys_on_device_body": "You do not have any exposures to submit. Please continue to isolate.",
-    "no_keys_on_device_title": "No exposures on device",
     "network_connection_body": "You need to be connected to WiFi to submit a verification code.",
     "network_connection_title": "No Internet Connection",
+    "no_keys_on_device_body": "You do not have any exposures to submit. Please continue to isolate.",
+    "no_keys_on_device_title": "No exposures on device",
     "unknown_body": "An unexpected error occurred. Please try again.",
     "unknown_title": "Something Went Wrong"
   }
