--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -6,12 +6,12 @@
     "version": "Versión:"
   },
   "callback": {
-    "fill_out_the_info": "Rellene la información de abajo y un rastreador de contactos de {{healthAuthorityName}} se pondrá en contacto con usted.",
     "firstname": "Nombre",
+    "if_you_prefer": "Si tu prefieres; llamar directamente al",
     "lastname": "Apellido",
     "phone_number_required": "Número de teléfono (requerido)",
     "request_a_call": "Pedir una llamada de un rastreador de contactos",
-    "success_body": "Nuestros rastreadores de contactos están trabajando arduamente para que usted y su comunidad estén seguros. {{healthAuthorityName}} Ha recibido su solicitud de llamada. Un experto se pondrá en contacto con usted dentro de las 24 horas.",
+    "success_body": "Nuestros rastreadores de contactos están trabajando arduamente para que usted y su comunidad estén seguros. [1:healthAuthorityName] Ha recibido su solicitud de llamada. Un experto se pondrá en contacto con usted dentro de 24 horas.",
     "success_got_it": "Entendido",
     "success_header": "Usted está en la fila"
   },
@@ -52,6 +52,25 @@
     "see_more": "Ver más",
     "source": "fuente: {{source}}"
   },
+  "covid_recommendation": {
+    "and_other_covid": "- Y otros síntomas de COVID-19 han mejorado.",
+    "find_a_test_center": "Encuentre un centro de pruebas",
+    "for_more_information": "Para obtener más información sobre cómo prevenir la transmisión de la enfermedad a otras personas, consulte la guía de los CDC sobre qué hacer cuando está enfermo:",
+    "from_others_at": "de los demás en todo momento y",
+    "get_a_covid_test": "Hágase una prueba de COVID-19:",
+    "get_rest_and_stay": "Descansa y mantente hidratado. Para obtener más información sobre cómo prevenir la transmisión de la enfermedad a otras personas, consulte la guía de los CDC sobre qué hacer cuando está enfermo:",
+    "includeing_people": "incluidas las personas de su hogar.",
+    "maintain_at_least": "Mantenga al menos 6 pies de distancia",
+    "monitor_for_fever": "Controle la fiebre, tos u otros síntomas de COVID-19:",
+    "physically_separate": "Separarse físicamente de los demás,",
+    "review_cdc_guidance": "Orientación de los CDC",
+    "review_symptoms": "Revise los síntomas de los CDC",
+    "stay_home": "Quédese en casa y aísle hasta que:",
+    "stay_home_except_to_get_medical_care": "Quédese en casa excepto para recibir atención médica.",
+    "to_prevent_the_spread": "Para prevenir la propagación de COVID-19 si está enfermo, debe:",
+    "wear_a_face_covering": "use una cubierta facial.",
+    "you_have_not_had_a": "- No ha tenido fiebre durante al menos 24 horas,"
+  },
   "errors": {
     "description": "Se ha producido un error. Vuelva a cargar la aplicación.",
     "reload": "Recargar",
@@ -60,6 +79,11 @@
     "try_again_later": "Intentar más tarde"
   },
   "escrow_verification": {
+    "complete_healthcheck": "Completar Healthcheck",
+    "complete": {
+      "body": "Está ayudando a contener la propagación del virus y a proteger a otros en tu comunidad.",
+      "title": "¡Gracias por mantener segura a su comunidad!"
+    },
     "error": {
       "invalid_phone_number": "El número de teléfono debe tener 10 dígitos",
       "rate_limit": "Has alcanzado el límite de envíos diarios. Vuelva a intentarlo en 24 horas."
@@ -131,6 +155,7 @@
       "yes_i_did_have": "Sí, si tuve síntomas"
     },
     "verification_code_info": {
+      "contact_at": "También puede llamar al {{healthAuthorityName}} al",
       "how_do_i_get_body": "Póngase en contacto con su autoridad de salud, {{healthAuthorityName}}",
       "how_do_i_get_header": "¿Cómo obtengo el código de verificación?",
       "info_body": "Un código de verificación es un código que le entrega su autoridad de salud {{healthAuthorityName}} cuando obtiene un resultado positivo a la prueba.\n\nEste código se utiliza para verificar que los resultados positivos de su prueba sean auténticos.\n\nCada código de verificación caduca después de un corto período de tiempo para asegurarnos de que no se presenten resultados de pruebas ya vencidos.\n\nSi encuentra un error al enviar su código de verificación, deberá obtener uno nuevo de la autoridad de salud antes de enviarlo otra vez.",
@@ -143,7 +168,7 @@
     "check_for_exposures": "Comprobar si hay exposiciones",
     "days_remaining": "Quedan {{daysOfQuarantineLeft}} días de su período de cuarentena recomendado.",
     "exposure_detail": {
-      "next_steps": "Próximos pasos",
+      "next_steps": "Revisar la guía de salud",
       "personalize_my_guidance": "Personalizar mi orientación",
       "schedule_callback": "Programe una llamada para recibir ayuda de un rastreador de contactos de {{healthAuthorityName}}",
       "speak_with_covid_support": "Habla con el soporte de COVID"
@@ -159,7 +184,7 @@
       "wear_a_mask": "Use mascarilla"
     },
     "how_does_this_work": "¿Como funciona esto?",
-    "how_does_this_work_para": "Cuando las Notificaciones de Exposición están activadas, su teléfono usará Bluetooth para intercambiar y guardar cadenas de carácteres aleatorios (llamadas identificaciones aleatorias) de aquellos teléfonos que tengan también las Notificaciones de Exposición activadas. Estas cadenas de caracteres aleatorios no le identificarán personalmente a los otros usuarios y varían muchas veces al día para proteger su privacidad. La fecha y duración de los encuentros serán grabados así como la distancia entre los dos teléfonos. Cuando una persona reporta un diagnóstico positivo, la cadena aleatoria de caracteres o random ID de su teléfono es marcada para anónimamente notificar al resto de usuarios. No se compartirá la información sobre su localización ni ninguna información personal.",
+    "how_does_this_work_para": "Cuando las Notificaciones de Exposición están activadas, su teléfono usará Bluetooth para intercambiar y guardar cadenas de carácteres aleatorios (llamadas identificaciones aleatorias) de aquellos teléfonos que tengan también las Notificaciones de Exposición activadas. Estas cadenas de caracteres aleatorios no le identificarán personalmente a los otros usuarios y varían muchas veces al día para proteger su privacidad. La fecha y duración de los encuentros serán grabados así como la distancia entre los dos teléfonos. Cuando una persona reporta un diagnóstico positivo, la cadena aleatoria de caracteres o random ID de su teléfono es marcada para anónimamente notificar al resto de usuarios. No se compartirá la información sobre su ubicación ni ninguna información personal.",
     "last_days": "Los últimos 14 días",
     "more_info": "Conozca más acerca de las Notificaciones de Exposición",
     "next_steps": "Siguientes pasos",
@@ -168,10 +193,12 @@
     "no_exposure_reports_over_past": "Usted no ha recibido ningún informe de exposición en los pasados 14 días",
     "possible_exposures": "Posibles exposiciones",
     "review_health_guidance": "Revisar la guía de salud",
+    "stay_quarantined_through": "Manténgase en cuarentena durante:",
     "updated": "Actualizado",
     "why_did_i_get_an_en": "¿Por qué recibí un aviso de exposición?",
     "why_did_i_get_an_en_para": "Usted recibirá un aviso de exposición cuando haya estado cerca de alguien que luego reciba un resultado positivo a COVID-19 y que haya decidido notificarlo.",
-    "your_device_exchanged": "Dentro de cada rango de fechas a continuación, su dispositivo intercambió claves con otro dispositivo que luego recibió un resultado positivo verificado de la prueba."
+    "your_device_exchanged": "Dentro de cada rango de fechas a continuación, su dispositivo intercambió claves con otro dispositivo que luego recibió un resultado positivo verificado de la prueba.",
+    "your_recommended_quarantine_is_over": "Su cuarentena recomendada ha terminado. Continúe siguiendo las pautas de salud."
   },
   "exposure_notification_alerts": {
     "bluetooth_body": "Para activar las Notificaciones de Exposición, primero debe activar Bluetooth en su aplicación de Configuraciones.",
@@ -200,7 +227,7 @@
     "bluetooth_info_body": "Su teléfono detecta otros teléfonos con los que pasa tiempo cerca mediante el uso de Bluetooth de baja energía. Esto permite que la aplicación registre sus encuentros diarios de forma anónima, incluso cuando no tenga la aplicación abierta en su dispositivo.",
     "bluetooth": {
       "all_services_on_subheader": "{{applicationName}} permanecerá activo después de que la aplicación se haya cerrado",
-      "location_disabled_error_message": "Para activar la tecnología de Notificaciones de Exposición, autorice el acceso a su localización que está en la Configuración de la aplicación",
+      "location_disabled_error_message": "Para activar la tecnología de Notificaciones de Exposición, autorice el acceso a su ubicación que está en la Configuración de la aplicación",
       "location_disabled_error_title": "Autorizar en la configuración del sistema",
       "location_header": "Localización",
       "location_subheader": "{{applicationName}} nunca accede a sus datos de ubicación y su dispositivo nunca es rastreado.",
@@ -212,7 +239,8 @@
       "tracing_on_header": "Detección de exposición activada"
     },
     "call_emergency_services": "Llamar Servicios de Emergencia",
-    "check_if_your_symptoms": "Ingresar síntomas y obtener una recomendación instántanea sobre cómo estar a salvo.",
+    "check_if_your_symptoms": "Ingresar síntomas y obtener una recomendación instantánea sobre cómo estar a salvo.",
+    "complete_healthcheck": "Completar Healthcheck",
     "could_not_open_link": "No se pudo abrir el vínculo: {{url}} . Intente abrir la URL en el navegador de su teléfono.",
     "enter_symptoms": "Ingrese síntomas",
     "error": {
@@ -264,7 +292,7 @@
     "eula_agree_terms_of_use": "Estoy de acuerdo en que he leído y aceptado los términos de uso",
     "i_am_over": "Sí, soy mayor de {{minimumAge}}",
     "location_alert_body": "Para usar las notificaciones de exposición, la configuración de ubicación del dispositivo debe estar activada.",
-    "location_alert_header": "Habilite el acceso a su localización desde “{{applicationName}}”",
+    "location_alert_header": "Habilite el acceso a su ubicación desde “{{applicationName}}”",
     "location_body": "Para usar la búsqueda de Bluetooth, la configuración de ubicación del dispositivo debe estar activada. La aplicación no usa sus datos de localización y no se puede rastrear su dispositivo individual.",
     "location_header": "Activar Localización",
     "location_services_already_active": "Los servicios de ubicación están activos",
@@ -301,7 +329,7 @@
     "proximity_tracing_subheader3": "Esta aplicación no lo protege del contagio de COVID-19.",
     "screen1_button": "¿Cómo funciona?",
     "screen1_header": "Juntos, podemos disminuir la propagación de COVID-19",
-    "screen1_image_label": "Dos personas chocando los cinco",
+    "screen1_image_label": "Dos personas chocandolas",
     "screen2_button": "¿Está protegida mi privacidad?",
     "screen2_header": "Su teléfono recuerda otros dispositivos de personas con las que ha tenido contacto, pero no le identificará",
     "screen2_image_label": "Dos personas usando sus teléfonos",
@@ -314,7 +342,7 @@
     "terms_header_title": "Condiciones de uso",
     "verify_your_age": "Verifique su edad",
     "welcome_image_label": "Una ilustración de personas con mascarillas, conectadas como nodos en una red.",
-    "you_must_be": "Debe ser {{minimumAge}} o anterior para usar {{applicationName}}. ¿Estás por encima de {{minimumAge}}?"
+    "you_must_be": "Debe ser [1:minimumAge] o ser mayor de [1:minimumAge] para usar [2:applicationName.] ¿Eres mayor de [1:minimumAge?]"
   },
   "product_analytics": {
     "i_understand_and_consent": "Entiendo y doy mi consentimiento",
@@ -347,9 +375,9 @@
       "sixty_five_and_over": "65+"
     },
     "call_emergency_services": {
-      "call_emergencies": "Llamar a {{emergencyPhoneNumber}}",
+      "call_emergencies": "Llamar al {{emergencyPhoneNumber}}",
       "seek_medical_attention": "Buscar atención médica inmediatamente",
-      "urgent_medical_attention_needed": "Es posible que se necesite atención médica urgente. Llame al {{emergencyPhoneNumber}} o vaya al Departamento de Emergencias"
+      "urgent_medical_attention_needed": "Es posible que necesite atención médica urgente. Llame al {{emergencyPhoneNumber}} o vaya al Departamento de Emergencias"
     },
     "emergency_symptoms": {
       "are_you_experiencing": "¿Tiene alguno de estos síntomas de emergencia?",
@@ -493,6 +521,8 @@
     "invalid_code_title": "Código inválido",
     "network_connection_body": "Para enviar el código de verificación debe estar conectado a WiFi.",
     "network_connection_title": "No hay conexión a internet",
+    "no_keys_on_device_body": "No tiene ninguna exposición que enviar. Continúe aislando.",
+    "no_keys_on_device_title": "Sin exposiciones en el dispositivo",
     "unknown_body": "Ocurrió un error inesperado. Por favor, intente de nuevo.",
     "unknown_title": "Algo salió mal"
   }
