--- a/src/locales/hmn.json
+++ b/src/locales/hmn.json
@@ -6,7 +6,6 @@
     "version": "Version:"
   },
   "callback": {
-    "fill_out_the_info": "Ua tiav cov ntaub ntawv hauv qab no es ib tug soj qab neeg mus kis mob los ntawm {{healthAuthorityName}} mam li tiv tauj koj.",
     "firstname": "Npe",
     "lastname": "Xeem",
     "phone_number_required": "Xov tooj (yuav tsum qhia)",
@@ -59,6 +58,10 @@
     "title": "Tsis Paub Dabtsi Puas"
   },
   "escrow_verification": {
+    "complete": {
+      "body": "Koj yuav pab tswj tau tus kab mob no thiab tiv thaiv lwm tus nyob hauv koj zos.",
+      "title": "Ua tsaug koj pab koom tes kom koj lub zos nyob nyab xeeb!"
+    },
     "error": {
       "invalid_phone_number": "Tus xov tooj yuav tsum yog 10 tug naj npawb"
     },
