--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -16,6 +16,11 @@
   "errors": {
     "something_went_wrong": "Si è verificato un errore"
   },
+  "escrow_verification": {
+    "complete": {
+      "title": "Grazie per aver tenuto al sicuro la tua comunità!"
+    }
+  },
   "export": {
     "code_input_body_bluetooth": "Digita il codice di verifica fornito da {{name}} con il risultato del test per verificare la diagnosi.",
     "code_input_title_bluetooth": "Verifica la tua diagnosi",
