--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -16,6 +16,11 @@
   "errors": {
     "something_went_wrong": "Coś poszło nie tak"
   },
+  "escrow_verification": {
+    "complete": {
+      "title": "Dziękujemy za zapewnienie bezpieczeństwa Twojej społeczności!"
+    }
+  },
   "export": {
     "code_input_title_bluetooth": "Zweryfikuj swoją diagnozę",
     "complete_body_bluetooth": "Wybierając opcję dzielenia się swoim statusem i anonimowego powiadamiania innych, pomagasz powstrzymać rozprzestrzenianie się wirusa i chronić innych w swojej społeczności.",
