--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,7 +35,6 @@
     "select_language": "Select language",
     "settings": "Open Settings",
     "skip": "Skip",
-    "something_went_wrong": "Something went wrong",
     "start": "Start",
     "submit": "Submit",
     "success": "Success"
@@ -53,7 +52,6 @@
     "source": "source: {{source}}"
   },
   "covid_recommendation": {
-    "and_other_covid": "- And other other COVID-19 symptoms have improved.",
     "find_a_test_center": "Find a test center",
     "for_more_information": "For more information on how to prevent spreading the illness to others, see the CDC guidance on what to do when you are sick: ",
     "from_others_at": "from others at all times and ",
@@ -65,11 +63,9 @@
     "physically_separate": "Physically separate yourself from others, ",
     "review_cdc_guidance": "Review CDC guidance",
     "review_symptoms": "Review CDC symptoms",
-    "stay_home": "Stay home and isolate, until:",
     "stay_home_except_to_get_medical_care": "Stay home except to get medical care.",
     "to_prevent_the_spread": "To prevent the spread of COVID-19 if you are sick you should:",
-    "wear_a_face_covering": "wear a face covering.",
-    "you_have_not_had_a": "- You have not had a fever for a least 24 hour,"
+    "wear_a_face_covering": "wear a face covering."
   },
   "errors": {
     "description": "An error has occurred. Please reload the app.",
@@ -103,9 +99,6 @@
   },
   "export": {
     "code": "Code",
-    "code_input_body_bluetooth": "Enter your verification code",
-    "code_input_button_cancel": "Cancel",
-    "code_input_title_bluetooth": "Verify your diagnosis",
     "complete_body_bluetooth": "You’re helping contain the spread of the virus and protect others in your community.",
     "complete_title": "Thanks for keeping your community safe!",
     "consent_body_0": "Sharing your positive diagnosis is optional and can only be done with your consent.",
@@ -118,11 +111,9 @@
     "enable_exposure_notifications_title": "Enable exposure notifications to continue",
     "enter_verification_code": "Enter verification code",
     "error": {
-      "invalid_code": "Try a different code",
       "invalid_format": "Codes may only contain numbers and letters",
       "network_connection_error": "There is no internet connection",
-      "unknown_code_verification_error": "Try a different code",
-      "verification_code_used": "Verification code has already been used"
+      "unknown_code_verification_error": "Try a different code"
     },
     "intro": {
       "body1": "If you have received a verification code from {{healthAuthorityName}} for a positive COVID-19 test, you can submit the verification code on the following screen.",
@@ -166,7 +157,7 @@
   },
   "exposure_history": {
     "check_for_exposures": "Check for exposures",
-    "days_remaining": "Days remaining in your recommended quarantine period:",
+    "days_remaining": "Days remaining:",
     "exposure_detail": {
       "next_steps": "Review health guidelines",
       "personalize_my_guidance": "Personalize my guidance",
@@ -192,8 +183,9 @@
     "no_exposure_reports": "No Exposure Reports",
     "no_exposure_reports_over_past": "You haven't received any exposure reports over the past 14-days",
     "possible_exposures": "Possible Exposures",
+    "recommended_quarantine": "Recommended Quarantine",
     "review_health_guidance": "Review Health Guidance",
-    "stay_quarantined_through": "Stay quarantined through:",
+    "stay_quarantined_through": "Last day:",
     "updated": "Updated",
     "why_did_i_get_an_en": "Why did I get an exposure notification?",
     "why_did_i_get_an_en_para": "You will receive an exposure notification when someone you have been in close contact with later uses the app to report a positive COVID-19 test.",
@@ -226,7 +218,6 @@
   "home": {
     "bluetooth_info_body": "Your phone detects other phones you spend time in close contact with using Bluetooth Low Energy. This allows the app to log your daily encounters anonymously, even when you don’t have the app open on your device.",
     "bluetooth": {
-      "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
       "location_disabled_error_message": "To activate the Exposure Notification technology, authorize Location access in the Settings app",
       "location_disabled_error_title": "Authorize in Settings",
       "location_header": "Location",
@@ -235,7 +226,6 @@
       "share": "Share {{applicationName}}",
       "share_message": "Check out this app {{applicationName}}, which can help us contain COVID-19! {{appDownloadUrl}}",
       "tracing_off_header": "Exposure Detection Off",
-      "tracing_off_subheader": "Enable Bluetooth and Proximity Tracing to get info about possible exposures",
       "tracing_on_header": "Exposure Detection On"
     },
     "call_emergency_services": "Call Emergency Services",
@@ -273,7 +263,6 @@
     "launch_get_started": "Get Started",
     "launch_screen1_header": "Welcome to ",
     "privacy_policy": "Privacy Policy",
-    "question_icon": "Question mark icon",
     "unchecked_checkbox": "Unchecked checkbox"
   },
   "navigation": {
